@@ -682,6 +682,7 @@ Localization
         #LOC_BDArmory_EvasionNonlinearity = Evasion/Extension Nonlinearity
         #LOC_BDArmory_EvasionThreshold = Evasion Distance Threshold
         #LOC_BDArmory_EvasionTimeThreshold = Evasion Time Threshold	
+        #LOC_BDArmory_EvasionMinRangeThreshold = Evasion Min Range Threshold
         #LOC_BDArmory_EvasionIgnoreMyTargetTargetingMe = Don't Evade My Target
         #LOC_BDArmory_CollisionAvoidanceThreshold = Vessel Avoidance Threshold
         #LOC_BDArmory_CollisionAvoidanceLookAheadPeriod = Vessel Avoidance Look-Ahead
@@ -758,6 +759,7 @@ Localization
         #LOC_BDArmory_AIWindow_EvExNonlin = Strength of oscillations when evading/extending
         #LOC_BDArmory_AIWindow_evadeDist = Evades if incoming fire within this distance
         #LOC_BDArmory_AIWindow_evadetimeDist = Min time under fire to trigger evasion
+        #LOC_BDArmory_AIWindow_evadeMinRange = Only evade if the attacker is beyond this range.
         #LOC_BDArmory_AIWindow_ColDist = Dodge incoming craft within this dist
         #LOC_BDArmory_AIWindow_ColTime = How many seconds ahead AI looks for collisions
         #LOC_BDArmory_AIWindow_ColStrength = How hard the AI will break away from incoming craft
@@ -806,6 +808,7 @@ Localization
         #LOC_BDArmory_AIWindow_Evade = Evasion
         #LOC_BDArmory_AIWindow_EvasionThreshold = Distance Threshold
         #LOC_BDArmory_AIWindow_EvasionTimeThreshold = Time Threshold
+        #LOC_BDArmory_AIWindow_EvasionMinRangeThreshold = Min Range Threshold
         #LOC_BDArmory_AIWindow_EvasionNonlinearity = Evade/Extend Nonlinearity
         #LOC_BDArmory_AIWindow_Extend = Extension
         #LOC_BDArmory_AIWindow_ExtendDistanceAirToAir = Distance A2A
@@ -858,7 +861,7 @@ Localization
         #LOC_BDArmory_AIWindow_ControlHelp_modeSwitches = Post-Stall AoA Mode-Switch controls when the plane will switch steering modes due to being beyond the AoA threshold. When flying to a target within the angle of the Immelmann Turn directly behind the craft, the craft will simply pitch up instead of rolling.
 
         #LOC_BDArmory_AIWindow_EvadeHelp = Evasion/Extension controls both how the AI reacts to incoming threats, be it gunfire, missiles, or other craft, and how the AI responds to where other craft are, relative to itself. 
-        #LOC_BDArmory_AIWindow_EvadeHelp_Evade = Min Evasion Time, Distance Threshold, Time Threshold, Don't Evade My Target - These four settings control when the AI will evade. Min Evasion Time sets how many seconds the AI will do evasive maneuvers. Distance Threshold sets how close incoming gunfire needs to come to trigger evasion. Time Threshold sets how long the AI needs to be under fire before it begins evading. The Don't Evade My Target toggle determines whether gunfire from the current target is ignored for evasion purposes.
+        #LOC_BDArmory_AIWindow_EvadeHelp_Evade = Min Evasion Time, Distance Threshold, Time Threshold, Min Range Threshold, Don't Evade My Target - These four settings control when the AI will evade. Min Evasion Time sets how many seconds the AI will do evasive maneuvers. Distance Threshold sets how close incoming gunfire needs to come to trigger evasion. Time Threshold sets how long the AI needs to be under fire before it begins evading. The Min Range Threshold sets the range that the attacker has to be beyond to trigger evasion. The Don't Evade My Target toggle determines whether gunfire from the current target is ignored for evasion purposes.
         #LOC_BDArmory_AIWindow_EvadeHelp_Nonlinearity = Evasion/Extension Nonlinearity - This controls the radius of the oscillation (in degrees) around the fly-to direction that the plane will make while evading or extending. This helps planes not fly in a straight line when evading/extending.
         #LOC_BDArmory_AIWindow_EvadeHelp_Dodge = Vessel Avoidance - These three settings set how the AI reacts to potential collisions. If another vessel is predicted to get within the Avoidance Threshold within the next Look-Ahead period then the AI will try to dodge it. The Avoidance Strength determines how rapidly the AI will try to change direction to avoid a predicted collision.
         #LOC_BDArmory_AIWindow_EvadeHelp_standoff = Standoff Distance is the closest the AI will approach the targeted craft in combat. If closer than the Standoff Distance, the AI will brake to increase the distance to the target.
