@@ -3,7 +3,6 @@ using UnityEngine;
 
 using BDArmory.Control;
 using BDArmory.Weapons.Missiles;
-using BDArmory.Weapons;
 
 namespace BDArmory.Radar
 {
